--- a/week1/day1.ipynb
+++ b/week1/day1.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -111,10 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b87cadb-d513-4303-baee-a37b6f938e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key found and looks good so far!\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "\n",
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "019974d9-f3ad-4a8a-b5f9-0a3719aea2d3",
    "metadata": {},
    "outputs": [],
@@ -156,10 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a58394bf-1e45-46af-9bfd-01e24da6f49a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Welcome! I'm glad to receive your message. How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "# To give you a preview -- calling OpenAI with these messages is this easy. Any problems, head over to the Troubleshooting notebook.\n",
     "\n",
@@ -178,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c5e793b2-6775-426a-a139-4848291d0463",
    "metadata": {},
    "outputs": [],
@@ -208,10 +224,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2ef960cf-6dc2-4cda-afb3-b38be12f4c97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Home - Edward Donner\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Well, hi there.\n",
+      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
+      "very\n",
+      "amateur) and losing myself in\n",
+      "Hacker News\n",
+      ", nodding my head sagely to things I only half understand.\n",
+      "I’m the co-founder and CTO of\n",
+      "Nebula.io\n",
+      ". We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\n",
+      "acquired in 2021\n",
+      ".\n",
+      "We work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\n",
+      "patented\n",
+      "our matching model, and our award-winning platform has happy customers and tons of press coverage.\n",
+      "Connect\n",
+      "with me for more!\n",
+      "December 21, 2024\n",
+      "Welcome, SuperDataScientists!\n",
+      "November 13, 2024\n",
+      "Mastering AI and LLM Engineering – Resources\n",
+      "October 16, 2024\n",
+      "From Software Engineer to AI Data Scientist – resources\n",
+      "August 6, 2024\n",
+      "Outsmart LLM Arena – a battle of diplomacy and deviousness\n",
+      "Navigation\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Get in touch\n",
+      "ed [at] edwarddonner [dot] com\n",
+      "www.edwarddonner.com\n",
+      "Follow me\n",
+      "LinkedIn\n",
+      "Twitter\n",
+      "Facebook\n",
+      "Subscribe to newsletter\n",
+      "Type your email…\n",
+      "Subscribe\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try one out. Change the website and add print statements to follow along.\n",
     "\n",
@@ -240,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "abdb8417-c5dc-44bc-9bee-2e059d162699",
    "metadata": {},
    "outputs": [],
@@ -254,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f0275b1b-7cfe-4f9d-abfa-7650d378da0c",
    "metadata": {},
    "outputs": [],
@@ -272,10 +341,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "26448ec4-5c00-4204-baec-7df91d11ff2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are looking at a website titled Home - Edward Donner\n",
+      "The contents of this website is as follows; please provide a short summary of this website in markdown. If it includes news or announcements, then summarize these too.\n",
+      "\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Well, hi there.\n",
+      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
+      "very\n",
+      "amateur) and losing myself in\n",
+      "Hacker News\n",
+      ", nodding my head sagely to things I only half understand.\n",
+      "I’m the co-founder and CTO of\n",
+      "Nebula.io\n",
+      ". We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\n",
+      "acquired in 2021\n",
+      ".\n",
+      "We work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\n",
+      "patented\n",
+      "our matching model, and our award-winning platform has happy customers and tons of press coverage.\n",
+      "Connect\n",
+      "with me for more!\n",
+      "December 21, 2024\n",
+      "Welcome, SuperDataScientists!\n",
+      "November 13, 2024\n",
+      "Mastering AI and LLM Engineering – Resources\n",
+      "October 16, 2024\n",
+      "From Software Engineer to AI Data Scientist – resources\n",
+      "August 6, 2024\n",
+      "Outsmart LLM Arena – a battle of diplomacy and deviousness\n",
+      "Navigation\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Get in touch\n",
+      "ed [at] edwarddonner [dot] com\n",
+      "www.edwarddonner.com\n",
+      "Follow me\n",
+      "LinkedIn\n",
+      "Twitter\n",
+      "Facebook\n",
+      "Subscribe to newsletter\n",
+      "Type your email…\n",
+      "Subscribe\n"
+     ]
+    }
+   ],
    "source": [
     "print(user_prompt_for(ed))"
    ]
@@ -301,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f25dcd35-0cd0-4235-9f64-ac37ed9eaaa5",
    "metadata": {},
    "outputs": [],
@@ -314,10 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "21ed95c5-7001-47de-a36d-1d6673b403ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh, are we starting with the tough ones? Well, brace yourself—2 + 2 equals a whopping 4! Shocking, I know!\n"
+     ]
+    }
+   ],
    "source": [
     "# To give you a preview -- calling OpenAI with system and user messages:\n",
     "\n",
@@ -335,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0134dfa4-8299-48b5-b444-f2a8c3403c88",
    "metadata": {},
    "outputs": [],
@@ -351,10 +483,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "36478464-39ee-485c-9f3f-6a4e458dbc9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'role': 'system',\n",
+       "  'content': 'You are an assistant that analyzes the contents of a website and provides a short summary, ignoring text that might be navigation related. Respond in markdown.'},\n",
+       " {'role': 'user',\n",
+       "  'content': 'You are looking at a website titled Home - Edward Donner\\nThe contents of this website is as follows; please provide a short summary of this website in markdown. If it includes news or announcements, then summarize these too.\\n\\nHome\\nOutsmart\\nAn arena that pits LLMs against each other in a battle of diplomacy and deviousness\\nAbout\\nPosts\\nWell, hi there.\\nI’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\\nvery\\namateur) and losing myself in\\nHacker News\\n, nodding my head sagely to things I only half understand.\\nI’m the co-founder and CTO of\\nNebula.io\\n. We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\\nacquired in 2021\\n.\\nWe work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\\npatented\\nour matching model, and our award-winning platform has happy customers and tons of press coverage.\\nConnect\\nwith me for more!\\nDecember 21, 2024\\nWelcome, SuperDataScientists!\\nNovember 13, 2024\\nMastering AI and LLM Engineering – Resources\\nOctober 16, 2024\\nFrom Software Engineer to AI Data Scientist – resources\\nAugust 6, 2024\\nOutsmart LLM Arena – a battle of diplomacy and deviousness\\nNavigation\\nHome\\nOutsmart\\nAn arena that pits LLMs against each other in a battle of diplomacy and deviousness\\nAbout\\nPosts\\nGet in touch\\ned [at] edwarddonner [dot] com\\nwww.edwarddonner.com\\nFollow me\\nLinkedIn\\nTwitter\\nFacebook\\nSubscribe to newsletter\\nType your email…\\nSubscribe'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Try this out, and then try for a few more websites\n",
     "\n",
@@ -371,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "905b9919-aba7-45b5-ae65-81b3d1d78e34",
    "metadata": {},
    "outputs": [],
@@ -389,17 +535,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "05e38d41-dfa4-4b20-9c96-c46ea75d9fb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# Summary of Edward Donner\\'s Website\\n\\nEdward Donner\\'s website serves as a personal hub for his interests in coding, AI, and music. He is the co-founder and CTO of Nebula.io, a company focused on using AI to enhance talent discovery and recruitment processes. Previously, he founded an AI startup named untapt, which was acquired in 2021. \\n\\nThe site features an arena called **Outsmart**, designed for LLMs (Large Language Models) to compete in diplomacy and strategy-based challenges.\\n\\n## Recent Posts\\n- **December 21, 2024**: Welcoming \"SuperDataScientists.\"\\n- **November 13, 2024**: Resources for mastering AI and LLM engineering.\\n- **October 16, 2024**: Transitioning from software engineer to AI data scientist with resources.\\n- **August 6, 2024**: Announcement of the Outsmart LLM arena.\\n\\nOverall, Edward shares his passion for LLMs while also providing resources and updates on his current projects.'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "summarize(\"https://edwarddonner.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3d926d59-450e-4609-92ba-2d6f244f1342",
    "metadata": {},
    "outputs": [],
@@ -413,10 +570,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3018853a-445f-41ff-9560-d925d1774b2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Summary of Edward Donner's Website\n",
+       "\n",
+       "Edward Donner's website serves as a personal and professional platform where he shares his interests and accomplishments. As a co-founder and CTO of Nebula.io, he focuses on leveraging AI to enhance talent discovery and engagement. Formerly, he founded AI startup untapt, which was acquired in 2021.\n",
+       "\n",
+       "## Key Features:\n",
+       "- **Personal Interests**: Ed enjoys coding, experimenting with large language models (LLMs), DJing, and electronic music production.\n",
+       "- **Professional Background**: Focuses on AI applications in talent management, with proprietary LLMs and a patented matching model that has garnered positive media attention.\n",
+       "\n",
+       "## Recent Announcements:\n",
+       "- **December 21, 2024**: Welcome message to SuperDataScientists.\n",
+       "- **November 13, 2024**: Post sharing resources on mastering AI and LLM engineering.\n",
+       "- **October 16, 2024**: Resources for transitioning from a software engineer to an AI data scientist.\n",
+       "- **August 6, 2024**: Introduction of the \"Outsmart LLM Arena,\" a competitive platform for LLMs focused on diplomacy and strategy."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://edwarddonner.com\")"
    ]
@@ -439,20 +621,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "45d83403-a24c-44b5-84ac-961449b4008f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Summary of CNN Website\n",
+       "\n",
+       "CNN provides a comprehensive platform for breaking news and in-depth coverage across a wide range of topics including:\n",
+       "\n",
+       "- **Current Events**: The site offers live updates and articles on significant events such as the ongoing wildfires in Los Angeles, the Ukraine-Russia War, and the Israel-Hamas conflict. More than 150,000 people have been advised to evacuate due to the raging LA wildfires, with significant impacts and emergencies reported.\n",
+       "\n",
+       "- **Politics**: The coverage includes significant political news, such as Donald Trump's criminal sentencing, analysis on the implications of his potential presidency, and developments regarding immigration policy under the Biden administration.\n",
+       "\n",
+       "- **Health and Science**: Recent studies on health risks associated with dietary habits and the presence of toxins in protein powders have been highlighted. There's also coverage on new findings in space exploration.\n",
+       "\n",
+       "- **Global Affairs**: Topics range from international conflicts to developments in business and technology, including sanctions on Russia and trade tensions.\n",
+       "\n",
+       "- **Sports and Entertainment**: CNN reports on significant sports events, updates on athletes, and high-profile entertainment news.\n",
+       "\n",
+       "The site integrates multimedia content, including videos and audio, providing users with both visual and auditory news consumption options. \n",
+       "\n",
+       "Overall, CNN serves as a crucial source for up-to-date information on global and national issues, designed to keep readers informed and engaged."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://cnn.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "75e9fd40-b354-4341-991e-863ef2e59db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Anthropic Overview\n",
+       "\n",
+       "Anthropic is an AI safety and research company based in San Francisco, focused on developing trustworthy and beneficial AI systems. The company emphasizes a multidisciplinary approach, leveraging expertise from machine learning, physics, policy, and product development.\n",
+       "\n",
+       "## Key Highlights\n",
+       "\n",
+       "- **Claude AI Models**: Recently launched Claude 3.5 Sonnet, the most advanced model to date, alongside Claude 3.5 Haiku.\n",
+       "- **Enterprise Solutions**: Offers AI solutions tailored for enterprise clients, aiming to build custom experiences and applications powered by Claude.\n",
+       "- **Research Initiatives**: Engaged in research regarding AI safety, including recent publications on constitutional AI and core views on AI safety.\n",
+       "  \n",
+       "## Recent Announcements\n",
+       "\n",
+       "- **October 22, 2024**: Announced the introduction of computer use with new AI models, Claude 3.5 Sonnet, and Claude 3.5 Haiku.\n",
+       "- **September 4, 2024**: Updates concerning Claude for Enterprise announced.\n",
+       "- **December 15, 2022**: Research publication titled \"Constitutional AI: Harmlessness from AI Feedback.\"\n",
+       "- **March 8, 2023**: Shared insights on \"Core Views on AI Safety: When, Why, What, and How.\"\n",
+       "\n",
+       "Overall, Anthropic is leading the charge in ensuring AI aligns with safety principles while pushing the boundaries of technology with innovative models."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://anthropic.com\")"
    ]
