--- a/week1/day5.ipynb
+++ b/week1/day5.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5b08506-dc8b-4443-9201-5f1848161363",
    "metadata": {},
    "outputs": [],
@@ -42,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fc5d8880-f2ee-4c06-af16-ecbc0262af61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key looks good so far\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize and constants\n",
     "\n",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "106dd65e-90af-4ca8-86b6-23a41840645b",
    "metadata": {},
    "outputs": [],
@@ -101,10 +109,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e30d8128-933b-44cc-81c8-ab4c9d86589a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://edwarddonner.com/',\n",
+       " 'https://edwarddonner.com/outsmart/',\n",
+       " 'https://edwarddonner.com/about-me-and-about-nebula/',\n",
+       " 'https://edwarddonner.com/posts/',\n",
+       " 'https://edwarddonner.com/',\n",
+       " 'https://news.ycombinator.com',\n",
+       " 'https://nebula.io/?utm_source=ed&utm_medium=referral',\n",
+       " 'https://www.prnewswire.com/news-releases/wynden-stark-group-acquires-nyc-venture-backed-tech-startup-untapt-301269512.html',\n",
+       " 'https://patents.google.com/patent/US20210049536A1/',\n",
+       " 'https://www.linkedin.com/in/eddonner/',\n",
+       " 'https://edwarddonner.com/2024/12/21/llm-resources-superdatascience/',\n",
+       " 'https://edwarddonner.com/2024/12/21/llm-resources-superdatascience/',\n",
+       " 'https://edwarddonner.com/2024/11/13/llm-engineering-resources/',\n",
+       " 'https://edwarddonner.com/2024/11/13/llm-engineering-resources/',\n",
+       " 'https://edwarddonner.com/2024/10/16/from-software-engineer-to-ai-data-scientist-resources/',\n",
+       " 'https://edwarddonner.com/2024/10/16/from-software-engineer-to-ai-data-scientist-resources/',\n",
+       " 'https://edwarddonner.com/2024/08/06/outsmart/',\n",
+       " 'https://edwarddonner.com/2024/08/06/outsmart/',\n",
+       " 'https://edwarddonner.com/',\n",
+       " 'https://edwarddonner.com/outsmart/',\n",
+       " 'https://edwarddonner.com/about-me-and-about-nebula/',\n",
+       " 'https://edwarddonner.com/posts/',\n",
+       " 'mailto:hello@mygroovydomain.com',\n",
+       " 'https://www.linkedin.com/in/eddonner/',\n",
+       " 'https://twitter.com/edwarddonner',\n",
+       " 'https://www.facebook.com/edward.donner.52']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ed = Website(\"https://edwarddonner.com\")\n",
     "ed.links"
@@ -128,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6957b079-0d96-45f7-a26a-3487510e9b35",
    "metadata": {},
    "outputs": [],
@@ -149,17 +193,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b97e4068-97ed-4120-beae-c42105e4d59a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are provided with a list of links found on a webpage. You are able to decide which of the links would be most relevant to include in a brochure about the company, such as links to an About page, or a Company page, or Careers/Jobs pages.\n",
+      "You should respond in JSON as in this example:\n",
+      "{\n",
+      "    \"links\": [\n",
+      "        {\"type\": \"about page\", \"url\": \"https://full.url/goes/here/about\"},\n",
+      "        {\"type\": \"careers page\": \"url\": \"https://another.full.url/careers\"}\n",
+      "    ]\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(link_system_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8e1f601b-2eaf-499d-b6b8-c99050c9d6b3",
    "metadata": {},
    "outputs": [],
@@ -175,17 +235,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6bcbfa78-6395-4685-b92c-22d592050fd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the list of links on the website of https://edwarddonner.com - please decide which of these are relevant web links for a brochure about the company, respond with the full https URL in JSON format. Do not include Terms of Service, Privacy, email links.\n",
+      "Links (some might be relative links):\n",
+      "https://edwarddonner.com/\n",
+      "https://edwarddonner.com/outsmart/\n",
+      "https://edwarddonner.com/about-me-and-about-nebula/\n",
+      "https://edwarddonner.com/posts/\n",
+      "https://edwarddonner.com/\n",
+      "https://news.ycombinator.com\n",
+      "https://nebula.io/?utm_source=ed&utm_medium=referral\n",
+      "https://www.prnewswire.com/news-releases/wynden-stark-group-acquires-nyc-venture-backed-tech-startup-untapt-301269512.html\n",
+      "https://patents.google.com/patent/US20210049536A1/\n",
+      "https://www.linkedin.com/in/eddonner/\n",
+      "https://edwarddonner.com/2024/12/21/llm-resources-superdatascience/\n",
+      "https://edwarddonner.com/2024/12/21/llm-resources-superdatascience/\n",
+      "https://edwarddonner.com/2024/11/13/llm-engineering-resources/\n",
+      "https://edwarddonner.com/2024/11/13/llm-engineering-resources/\n",
+      "https://edwarddonner.com/2024/10/16/from-software-engineer-to-ai-data-scientist-resources/\n",
+      "https://edwarddonner.com/2024/10/16/from-software-engineer-to-ai-data-scientist-resources/\n",
+      "https://edwarddonner.com/2024/08/06/outsmart/\n",
+      "https://edwarddonner.com/2024/08/06/outsmart/\n",
+      "https://edwarddonner.com/\n",
+      "https://edwarddonner.com/outsmart/\n",
+      "https://edwarddonner.com/about-me-and-about-nebula/\n",
+      "https://edwarddonner.com/posts/\n",
+      "mailto:hello@mygroovydomain.com\n",
+      "https://www.linkedin.com/in/eddonner/\n",
+      "https://twitter.com/edwarddonner\n",
+      "https://www.facebook.com/edward.donner.52\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_links_user_prompt(ed))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a29aca19-ca13-471c-a4b4-5abbfa813f69",
    "metadata": {},
    "outputs": [],
@@ -206,10 +301,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "74a827a0-2782-4ae5-b210-4a242a8b4cc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/',\n",
+       " '/models',\n",
+       " '/datasets',\n",
+       " '/spaces',\n",
+       " '/posts',\n",
+       " '/docs',\n",
+       " '/enterprise',\n",
+       " '/pricing',\n",
+       " '/login',\n",
+       " '/join',\n",
+       " '/blog/smolagents',\n",
+       " '/microsoft/phi-4',\n",
+       " '/hexgrad/Kokoro-82M',\n",
+       " '/deepseek-ai/DeepSeek-V3',\n",
+       " '/black-forest-labs/FLUX.1-dev',\n",
+       " '/meta-llama/Llama-3.3-70B-Instruct',\n",
+       " '/models',\n",
+       " '/spaces/JeffreyXiang/TRELLIS',\n",
+       " '/spaces/osanseviero/gemini-coder',\n",
+       " '/spaces/lllyasviel/iclight-v2',\n",
+       " '/spaces/reach-vb/2024-ai-timeline',\n",
+       " '/spaces/fffiloni/LatentSync',\n",
+       " '/spaces',\n",
+       " '/datasets/fka/awesome-chatgpt-prompts',\n",
+       " '/datasets/DAMO-NLP-SG/multimodal_textbook',\n",
+       " '/datasets/cfahlgren1/react-code-instructions',\n",
+       " '/datasets/PowerInfer/QWQ-LONGCOT-500K',\n",
+       " '/datasets/OpenLeecher/lmsys_chat_1m_clean',\n",
+       " '/datasets',\n",
+       " '/join',\n",
+       " '/pricing#endpoints',\n",
+       " '/pricing#spaces',\n",
+       " '/pricing',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/allenai',\n",
+       " '/facebook',\n",
+       " '/amazon',\n",
+       " '/google',\n",
+       " '/Intel',\n",
+       " '/microsoft',\n",
+       " '/grammarly',\n",
+       " '/Writer',\n",
+       " '/docs/transformers',\n",
+       " '/docs/diffusers',\n",
+       " '/docs/safetensors',\n",
+       " '/docs/huggingface_hub',\n",
+       " '/docs/tokenizers',\n",
+       " '/docs/peft',\n",
+       " '/docs/transformers.js',\n",
+       " '/docs/timm',\n",
+       " '/docs/trl',\n",
+       " '/docs/datasets',\n",
+       " '/docs/text-generation-inference',\n",
+       " '/docs/accelerate',\n",
+       " '/models',\n",
+       " '/datasets',\n",
+       " '/spaces',\n",
+       " '/tasks',\n",
+       " 'https://ui.endpoints.huggingface.co',\n",
+       " '/chat',\n",
+       " '/huggingface',\n",
+       " '/brand',\n",
+       " '/terms-of-service',\n",
+       " '/privacy',\n",
+       " 'https://apply.workable.com/huggingface/',\n",
+       " 'mailto:press@huggingface.co',\n",
+       " '/learn',\n",
+       " '/docs',\n",
+       " '/blog',\n",
+       " 'https://discuss.huggingface.co',\n",
+       " 'https://status.huggingface.co/',\n",
+       " 'https://github.com/huggingface',\n",
+       " 'https://twitter.com/huggingface',\n",
+       " 'https://www.linkedin.com/company/huggingface/',\n",
+       " '/join/discord',\n",
+       " 'https://www.zhihu.com/org/huggingface',\n",
+       " 'https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/chinese-language-blog/wechat.jpg']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Anthropic has made their site harder to scrape, so I'm using HuggingFace..\n",
     "\n",
@@ -219,10 +407,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d3d583e2-dcc4-40cc-9b28-1e8dbf402924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'links': [{'type': 'about page', 'url': 'https://huggingface.co/huggingface'},\n",
+       "  {'type': 'careers page', 'url': 'https://apply.workable.com/huggingface/'},\n",
+       "  {'type': 'blog page', 'url': 'https://huggingface.co/blog'},\n",
+       "  {'type': 'models page', 'url': 'https://huggingface.co/models'},\n",
+       "  {'type': 'datasets page', 'url': 'https://huggingface.co/datasets'},\n",
+       "  {'type': 'spaces page', 'url': 'https://huggingface.co/spaces'},\n",
+       "  {'type': 'enterprise page', 'url': 'https://huggingface.co/enterprise'},\n",
+       "  {'type': 'pricing page', 'url': 'https://huggingface.co/pricing'}]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_links(\"https://huggingface.co\")"
    ]
